<resources>
    <string name="app_name">School Diary</string>
    <string name="continue_btn">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page_fragment">Main Page</string>
    <string name="registration_fragment">Registration</string>
    <string name="choose_class_fragment">Choose class</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="email_password_status">email/password status</string>
    <string name="detail_status">detail status</string>
    <string name="signed_out">Signed Out</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="diary">Diary</string>
    <string name="more">More</string>
    <string name="marks">Marks</string>
    <string name="settings">Settings</string>
    <string name="news">News</string>
    <string name="final_grades">Final grades</string>
    <string name="sign_out">Sign out</string>
    <string name="timetable_of_rings">Ring\'s timetable</string>
    <string name="timetable_of_vacation">Vacation\'s timetable</string>
    <string name="school_diary">School Diary</string>
    <string name="registration_bottom_text">Official app of Gymnasium 77</string>
    <string name="subject">Subject</string>
    <string name="average">Average</string>
    <string name="single_mark_example">1</string>
    <string name="first_semester">I</string>
    <string name="second_semester">II</string>
    <string name="third_semester">III</string>
    <string name="forth_semester">IV</string>
    <string name="final_semester">Final</string>
    <string name="start_time">08:00</string>
    <string name="example_number_cabinet">218</string>
    <string name="example_day">Sunday</string>
    <string name="teacher">Teacher</string>
    <string name="classroom">Classroom</string>
    <string name="homework">Homework</string>
    <string name="theme">Theme</string>
    <string name="school_name">Gymnasuim 77</string>
    <string name="caution">Caution: this is copied text from random english website just to give an example </string>
    <string name="call_schedule">Call schedule</string>
    <string name="holiday_schedule">Holiday schedule</string>
    <string name="example_average">1.00</string>
    <string name="example_marks">1111</string>
</resources>
