<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_timetable_of_rings"
        android:title="@string/timetable_of_rings"
        android:icon="@drawable/timetable_of_rings_24dp" />
    <item android:id="@+id/action_timetable_of_vacation"
        android:title="@string/timetable_of_vacation"
        android:icon="@drawable/timetable_of_vacation_24dp"/>
    <item android:id="@+id/action_final_grades"
        android:title="@string/final_grades"
        android:icon="@drawable/final_grades_24dp"/>
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings_24dp"/>
    <item android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/sign_out_24dp"/>
</menu>