<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bottomnavigation.mainfragments.MarksFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:paddingVertical="10dp"
            android:text="@string/subject"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@color/grayDark"/>

        <TextView
            android:id="@+id/all_marks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:paddingVertical="10dp"
            android:text="@string/marks" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@color/grayDark"/>

        <TextView
            android:id="@+id/average_mark"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingVertical="10dp"
            android:text="@string/average" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayDark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="56dp"/>

</LinearLayout>