<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.finalgrades.FinalGradesFragment">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="10dp"
        android:text="@string/subject"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/first_divider"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/first_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/first_mark"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/first_semester"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/second_divider"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/first_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/second_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/second_mark"
        app:layout_constraintStart_toEndOf="@id/first_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/second_semester"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/third_divider"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/second_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/third_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/third_mark"
        app:layout_constraintStart_toEndOf="@id/second_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/third_semester"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/forth_divider"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/third_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/forth_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/forth_mark"
        app:layout_constraintStart_toEndOf="@id/third_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forth_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/forth_semester"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/fifth_divider"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/forth_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/fifth_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/fifth_mark"
        app:layout_constraintStart_toEndOf="@id/forth_mark"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fifth_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingRight="10dp"
        android:text="@string/final_semester"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/fifth_divider"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_divider" />

</androidx.constraintlayout.widget.ConstraintLayout>
