<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/subject"
        android:paddingVertical="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/first_divider"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/first_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/all_marks"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/all_marks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/example_marks"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/second_divider"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/first_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/second_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grayDark"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toStartOf="@id/average_mark"
        app:layout_constraintStart_toEndOf="@id/all_marks"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/average_mark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/example_average"
        android:paddingVertical="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/second_divider"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>